优化jvm参数配置