@@ -516,33 +516,94 @@
 									</systemProperties> -->
 									<!-- http://www.cnblogs.com/paddix/p/5309550.html -->
 									<!-- http://unixboy.iteye.com/blog/174173/ -->
+									<!-- https://www.cnblogs.com/wgslucky/p/11764769.html -->
 									<extraArguments>
 										<!-- 后台服务运行 -->
 										<extraArgument>-server</extraArgument>
-										<!-- 设置JVM促使内存为1024m。此值可以设置与-Xmx相同，以避免每次垃圾回收完成后JVM重新分配内存。  -->
-										<extraArgument>-Xms1024M</extraArgument>
-										<!-- 设置JVM最大可用内存为1024M -->
-										<extraArgument>-Xmx1024M</extraArgument>
 										<!-- 设置年轻代大小为512M。整个JVM内存大小=年轻代大小 + 年老代大小 + 持久代大小。
 											   持久代一般固定大小为64m，所以增大年轻代后，将会减小年老代大小。
 											   此值对系统性能影响较大，Sun官方推荐配置为整个堆的3/8。 
 										-->
-										<extraArgument>-Xmn512M</extraArgument>
-										<!-- 选择垃圾收集器为并行收集器。此配置仅对年轻代有效。即上述配置下，年轻代使用并发收集，而年老代仍旧使用串行收集。 -->
-										<extraArgument>-XX:+UseParallelGC</extraArgument>
-										<!-- 配置并行收集器的线程数，即：同时多少个线程一起进行垃圾回收。此值最好配置与处理器数目相等。 -->
-										<extraArgument>-XX:ParallelGCThreads=4</extraArgument>
-										<!-- 设置年老代为并发收集。测试中配置这个以后，-XX:NewRatio=4的配置失效了，原因不明。所以，此时年轻代大小最好用-Xmn设置。 -->
-										<!-- <extraArgument>-XX:+UseConcMarkSweepGC</extraArgument> -->
-										<!-- 设置年轻代为并行收集。可与CMS收集同时使用。JDK5.0以上，JVM会根据系统配置自行设置，所以无需再设置此值。 -->
-										<!-- <extraArgument>-XX:+UseParNewGC</extraArgument> -->
-										<!-- 元空间 -->
-										<!-- 初始空间大小，达到该值就会触发垃圾收集进行类型卸载，同时GC会对该值进行调整：如果释放了大量的空间，就适当降低该值；如果释放了很少的空间，那么在不超过MaxMetaspaceSize时，适当提高该值。 -->
-										<extraArgument>-XX:MetaspaceSize=128M</extraArgument>
+										<extraArgument>-Xmn512M</extraArgument>	
+										<!-- 设置JVM促使内存为1024m。此值可以设置与-Xmx相同，以避免每次垃圾回收完成后JVM重新分配内存。  -->
+										<extraArgument>-Xms1024M</extraArgument>
+										<!-- 设置JVM最大可用内存为1024M -->
+										<extraArgument>-Xmx1024M</extraArgument>
+										<!-- 初始元空间大小，达到该值就会触发垃圾收集进行类型卸载，同时GC会对该值进行调整：如果释放了大量的空间，就适当降低该值；如果释放了很少的空间，那么在不超过MaxMetaspaceSize时，适当提高该值。 -->
+										<extraArgument>-XX:MetaspaceSize=512M</extraArgument>
 										<!-- 最大空间，默认是没有限制的 -->
 										<extraArgument>-XX:MaxMetaspaceSize=512M</extraArgument>
-										<!-- 在GC之后，最小的Metaspace剩余空间容量的百分比，减少为分配空间所导致的垃圾收集 <extraArgument>-XX:MinMetaspaceFreeRatio=60</extraArgument> -->
-										<!-- 在GC之后，最大的Metaspace剩余空间容量的百分比，减少为释放空间所导致的垃圾收集 <extraArgument>-XX:MaxMetaspaceFreeRatio=60</extraArgument> -->
+										<!-- 设置年轻代初始值为256M，表示新生代初始内存的大小，应该小于-Xms的值； -->
+										<extraArgument>-XX:NewSize=256M</extraArgument>
+										<!-- 设置年轻代最大值为512M，表示新生代可被分配的内存的最大上限；当然这个值应该小于-Xmx的值； -->
+										<extraArgument>-XX:MaxNewSize=512M</extraArgument>
+										<!-- 设置年轻代中Eden区与一个Survivor区的比值。表示Edgen为一个Survivor的4倍，即1个Survivor区占整个年轻代大小的1/6 -->
+										<extraArgument>-XX:SurvivorRatio=4</extraArgument>
+										<!-- 设置老年代与年轻代（包括1个Eden和2个Survivor区）的比值。表示老年代是年轻代的4倍 -->
+										<extraArgument>-XX:NewRatio=4</extraArgument>
+										<!-- 设置让大于此阈值的对象直接分配在老年代（只对Serial、ParNew收集器有效），单位为字节 -->
+										<!-- <extraArgument>-XX:PretenureSizeThreadshold=1024</extraArgument> -->
+										<!-- 指定使用G1圾收集器 -->
+										<extraArgument>-XX:+UseG1GC</extraArgument>
+										<!-- 解锁实验性虚拟机标志 -->
+										<extraArgument>-XX:+UnlockExperimentalVMOptions</extraArgument>
+										<extraArgument>-XX:+UnlockDiagnosticVMOptions</extraArgument>
+										<!-- 设置的 G1 区域的大小.值是 2 的幂,范围是 1 MB 到 32 MB 之间.目标是根据最小的 Java 堆大小划分出约 2048 个区域. -->
+										<extraArgument>-XX:G1HeapRegionSize=8</extraArgument>
+										<!-- 为所需的最长暂停时间, 设置目标值.默认值是 200 毫秒.如果MaxGCPauseMillis设置的过小,GC就会频繁,吞吐量就会下降.如果MaxGCPauseMillis设置的过大,应用程序暂停时间就会变长.G1的默认暂停时间是200毫秒. -->
+										<extraArgument>-XX:MaxGCPauseMillis=200</extraArgument>
+										<!-- 设置要用作年轻代大小最小值的堆百分比.默认值是 Java 堆的 5%.这是一个实验性的标志.有关示例,请参见“如何解锁实验性虚拟机标志”.此设置取代了 -XX:DefaultMinNewGenPercent 设置.Java HotSpot VM build 23 中没有此设置. -->
+										<extraArgument>-XX:G1NewSizePercent=5</extraArgument>
+										<!-- # 设置要用作年轻代大小最大值的堆大小百分比.默认值是 Java 堆的 60%.这是一个实验性的标志.此设置取代了 -XX:DefaultMaxNewGenPercent 设置.Java HotSpot VM build 23 中没有此设置. -->
+										<extraArgument>-XX:G1MaxNewSizePercent=60</extraArgument>
+										<!-- 配置并行收集器的线程数，即：同时多少个线程一起进行垃圾回收。此值最好配置与处理器数目相等。 -->
+										<!-- 设置 STW 工作线程数的值.将 n 的值设置为逻辑处理器的数量 .n 的值与逻辑处理器的数量相同,最多为 8. -->
+										<!-- 如果逻辑处理器不止八个,则将 n 的值设置为逻辑处理器数的 5/8 左右.这适用于大多数情况, 除非是较大的 SPARC 系统,其中 n 的值可以是逻辑处理器数的 5/16 左右. -->
+										<extraArgument>-XX:ParallelGCThreads=8</extraArgument>
+										<!-- 设置并行标记的线程数.将 n 设置为并行垃圾回收线程数 (ParallelGCThreads) 的 1/4 左右. -->
+										<extraArgument>-XX:ConcGCThreads=2</extraArgument>
+										<!-- 设置触发标记周期的 Java 堆占用率阈值.默认占用率是整个 Java 堆的 45%. -->
+										<extraArgument>-XX:InitiatingHeapOccupancyPercent=45</extraArgument>
+										<!-- 为混合垃圾回收周期中要包括的旧区域设置占用率阈值.默认占用率为 65%.这是一个实验性的标志.此设置取代了 -XX:G1OldCSetRegionLiveThresholdPercent 设置.Java HotSpot VM build 23 中没有此设置. -->
+										<extraArgument>-XX:G1MixedGCLiveThresholdPercent=65</extraArgument>
+										<!-- 设置您愿意浪费的堆百分比.如果可回收百分比小于堆废物百分比,Java HotSpot VM 不会启动混合垃圾回收周期.默认值是 10%.Java HotSpot VM build 23 中没有此设置. -->
+										<extraArgument>-XX:G1HeapWastePercent=10</extraArgument>
+										<!-- 设置标记周期完成后,对存活数据上限为 G1MixedGCLIveThresholdPercent 的旧区域执行混合垃圾回收的目标次数.默认值是 8 次混合垃圾回收.混合回收的目标是要控制在此目标次数以内.Java HotSpot VM build 23 中没有此设置. -->
+										<extraArgument>-XX:G1MixedGCCountTarget=8</extraArgument>
+										<!-- 设置混合垃圾回收期间要回收的最大旧区域数.默认值是 Java 堆的 10%.Java HotSpot VM build 23 中没有此设置. -->
+										<extraArgument>-XX:G1OldCSetRegionThresholdPercent=10</extraArgument>
+										<!-- 设置作为空闲空间的预留内存百分比,以降低目标空间溢出的风险.默认值是 10%.增加或减少百分比时,请确保对总的 Java 堆调整相同的量.Java HotSpot VM build 23 中没有此设置. -->
+										<extraArgument>-XX:G1ReservePercent=10</extraArgument>
+										<!-- 手动开启Java String对象的分割工作,这个是JDK8u20之后新增的参数,主要用于相同String避免重复申请内存,节约Region的使用； -->
+										<extraArgument>-XX:+UseStringDeduplication</extraArgument>
+										<!-- 关闭GC时间过长系统自动检测OOM(OutOfMemory)提示GC overhead limit exceeded,目的是显示内存溢出异常,方便Wrapper Service检测到并重启 -->
+										<extraArgument>-XX:-UseGCOverheadLimit</extraArgument>
+										<!-- 表示一个对象如果在Survivor区移动了7次那下次MinorGC时就进入老年代。如果设置为0的话，则年轻代对象不经过Survivor区，直接进入年老代，对于需要大量常驻内存的应用， 
+											这样做可以提高效率。如果将此值设置为一个较大值，则年轻代对象会在Survivor区进行多次复制，这样可以增加对象在年轻代存活时间，增加对象在年轻代被垃圾回收的概率， 
+											减少Full GC的频率，可以在某种程度上提高服务稳定性。默认值:15 -->
+										<extraArgument>-XX:MaxTenuringThreshold=10</extraArgument>
+										<!-- 取消 内存整理，G1GC 天生优势 --> 
+										<extraArgument>-XX:-ResizePLAB</extraArgument>
+										<extraArgument>-XX:+PrintAdaptiveSizePolicy</extraArgument>
+										<extraArgument>-XX:+ParallelRefProcEnabled</extraArgument>
+										<extraArgument>-XX:+G1SummarizeConcMark</extraArgument>
+										<!-- 开启GC日志，等同于-verbose:gc 表示打开简化的GC日志 -->
+										<extraArgument>-XX:+PrintGC</extraArgument>
+										<!-- 在发生垃圾回收时打印内存回收日志，并在进程退出时输出当前内存各区域分配情况 -->
+										<extraArgument>-XX:+PrintGCDetails</extraArgument>
+										<!-- 打印出GC发生的具体时间 -->
+										<extraArgument>-XX:+PrintGCDateStamps</extraArgument>
+										<extraArgument>-XX:+PrintGCApplicationStoppedTime</extraArgument> <!-- 打印应用停留时间  -->
+										<!-- 让JVM在每次MinorGC后打印出当前使用的Survivor中对象的年龄分布  -->
+										<extraArgument>-XX:+PrintTenuringDistribution</extraArgument> 
+										<!-- -Xloggc:<file> 表示把GC日志写入到一个文件中去，而不是打印到标准输出中 -->
+										<extraArgument>-Xloggc:../logs/gc.log</extraArgument>
+										<extraArgument>-XX:+UseGCLogFileRotation</extraArgument>
+										<extraArgument>-XX:NumberOfGCLogFiles=10</extraArgument>
+										<extraArgument>-XX:GCLogFileSize=20M</extraArgument>
+										<!--  当堆内存空间溢出时输出堆的内存快照 -->
+										<extraArgument>-XX:+HeapDumpOnOutOfMemoryError</extraArgument>
+										<extraArgument>-XX:HeapDumpPath=../logs/heap.log</extraArgument>
 									</extraArguments>
 								</jvmSettings>
 							</program>
@@ -631,30 +692,90 @@
 									<!-- http://www.cnblogs.com/paddix/p/5309550.html -->
 									<!-- http://unixboy.iteye.com/blog/174173/ -->
 									<extraArguments>
-										<!-- 设置JVM促使内存为1024m。此值可以设置与-Xmx相同，以避免每次垃圾回收完成后JVM重新分配内存。  -->
-										<extraArgument>-Xms1024M</extraArgument>
-										<!-- 设置JVM最大可用内存为1024M -->
-										<extraArgument>-Xmx1024M</extraArgument>
 										<!-- 设置年轻代大小为512M。整个JVM内存大小=年轻代大小 + 年老代大小 + 持久代大小。
 											   持久代一般固定大小为64m，所以增大年轻代后，将会减小年老代大小。
 											   此值对系统性能影响较大，Sun官方推荐配置为整个堆的3/8。 
 										-->
-										<extraArgument>-Xmn512M</extraArgument>
-										<!-- 选择垃圾收集器为并行收集器。此配置仅对年轻代有效。即上述配置下，年轻代使用并发收集，而年老代仍旧使用串行收集。 -->
-										<extraArgument>-XX:+UseParallelGC</extraArgument>
-										<!-- 配置并行收集器的线程数，即：同时多少个线程一起进行垃圾回收。此值最好配置与处理器数目相等。 -->
-										<extraArgument>-XX:ParallelGCThreads=4</extraArgument>
-										<!-- 设置年老代为并发收集。测试中配置这个以后，-XX:NewRatio=4的配置失效了，原因不明。所以，此时年轻代大小最好用-Xmn设置。 -->
-										<!-- <extraArgument>-XX:+UseConcMarkSweepGC</extraArgument> -->
-										<!-- 设置年轻代为并行收集。可与CMS收集同时使用。JDK5.0以上，JVM会根据系统配置自行设置，所以无需再设置此值。 -->
-										<!-- <extraArgument>-XX:+UseParNewGC</extraArgument> -->
-										<!-- 元空间 -->
-										<!-- 初始空间大小，达到该值就会触发垃圾收集进行类型卸载，同时GC会对该值进行调整：如果释放了大量的空间，就适当降低该值；如果释放了很少的空间，那么在不超过MaxMetaspaceSize时，适当提高该值。 -->
-										<extraArgument>-XX:MetaspaceSize=128M</extraArgument>
+										<extraArgument>-Xmn512M</extraArgument>	
+										<!-- 设置JVM促使内存为1024m。此值可以设置与-Xmx相同，以避免每次垃圾回收完成后JVM重新分配内存。  -->
+										<extraArgument>-Xms1024M</extraArgument>
+										<!-- 设置JVM最大可用内存为1024M -->
+										<extraArgument>-Xmx1024M</extraArgument>
+										<!-- 初始元空间大小，达到该值就会触发垃圾收集进行类型卸载，同时GC会对该值进行调整：如果释放了大量的空间，就适当降低该值；如果释放了很少的空间，那么在不超过MaxMetaspaceSize时，适当提高该值。 -->
+										<extraArgument>-XX:MetaspaceSize=512M</extraArgument>
 										<!-- 最大空间，默认是没有限制的 -->
 										<extraArgument>-XX:MaxMetaspaceSize=512M</extraArgument>
-										<!-- 在GC之后，最小的Metaspace剩余空间容量的百分比，减少为分配空间所导致的垃圾收集 <extraArgument>-XX:MinMetaspaceFreeRatio=60</extraArgument> -->
-										<!-- 在GC之后，最大的Metaspace剩余空间容量的百分比，减少为释放空间所导致的垃圾收集 <extraArgument>-XX:MaxMetaspaceFreeRatio=60</extraArgument> -->
+										<!-- 设置年轻代初始值为256M，表示新生代初始内存的大小，应该小于-Xms的值； -->
+										<extraArgument>-XX:NewSize=256M</extraArgument>
+										<!-- 设置年轻代最大值为512M，表示新生代可被分配的内存的最大上限；当然这个值应该小于-Xmx的值； -->
+										<extraArgument>-XX:MaxNewSize=512M</extraArgument>
+										<!-- 设置年轻代中Eden区与一个Survivor区的比值。表示Edgen为一个Survivor的4倍，即1个Survivor区占整个年轻代大小的1/6 -->
+										<extraArgument>-XX:SurvivorRatio=4</extraArgument>
+										<!-- 设置老年代与年轻代（包括1个Eden和2个Survivor区）的比值。表示老年代是年轻代的4倍 -->
+										<extraArgument>-XX:NewRatio=4</extraArgument>
+										<!-- 设置让大于此阈值的对象直接分配在老年代（只对Serial、ParNew收集器有效），单位为字节 -->
+										<!-- <extraArgument>-XX:PretenureSizeThreadshold=1024</extraArgument> -->
+										<!-- 指定使用G1圾收集器 -->
+										<extraArgument>-XX:+UseG1GC</extraArgument>
+										<!-- 解锁实验性虚拟机标志 -->
+										<extraArgument>-XX:+UnlockExperimentalVMOptions</extraArgument>
+										<extraArgument>-XX:+UnlockDiagnosticVMOptions</extraArgument>
+										<!-- 设置的 G1 区域的大小.值是 2 的幂,范围是 1 MB 到 32 MB 之间.目标是根据最小的 Java 堆大小划分出约 2048 个区域. -->
+										<extraArgument>-XX:G1HeapRegionSize=8</extraArgument>
+										<!-- 为所需的最长暂停时间, 设置目标值.默认值是 200 毫秒.如果MaxGCPauseMillis设置的过小,GC就会频繁,吞吐量就会下降.如果MaxGCPauseMillis设置的过大,应用程序暂停时间就会变长.G1的默认暂停时间是200毫秒. -->
+										<extraArgument>-XX:MaxGCPauseMillis=200</extraArgument>
+										<!-- 设置要用作年轻代大小最小值的堆百分比.默认值是 Java 堆的 5%.这是一个实验性的标志.有关示例,请参见“如何解锁实验性虚拟机标志”.此设置取代了 -XX:DefaultMinNewGenPercent 设置.Java HotSpot VM build 23 中没有此设置. -->
+										<extraArgument>-XX:G1NewSizePercent=5</extraArgument>
+										<!-- # 设置要用作年轻代大小最大值的堆大小百分比.默认值是 Java 堆的 60%.这是一个实验性的标志.此设置取代了 -XX:DefaultMaxNewGenPercent 设置.Java HotSpot VM build 23 中没有此设置. -->
+										<extraArgument>-XX:G1MaxNewSizePercent=60</extraArgument>
+										<!-- 配置并行收集器的线程数，即：同时多少个线程一起进行垃圾回收。此值最好配置与处理器数目相等。 -->
+										<!-- 设置 STW 工作线程数的值.将 n 的值设置为逻辑处理器的数量 .n 的值与逻辑处理器的数量相同,最多为 8. -->
+										<!-- 如果逻辑处理器不止八个,则将 n 的值设置为逻辑处理器数的 5/8 左右.这适用于大多数情况, 除非是较大的 SPARC 系统,其中 n 的值可以是逻辑处理器数的 5/16 左右. -->
+										<extraArgument>-XX:ParallelGCThreads=8</extraArgument>
+										<!-- 设置并行标记的线程数.将 n 设置为并行垃圾回收线程数 (ParallelGCThreads) 的 1/4 左右. -->
+										<extraArgument>-XX:ConcGCThreads=2</extraArgument>
+										<!-- 设置触发标记周期的 Java 堆占用率阈值.默认占用率是整个 Java 堆的 45%. -->
+										<extraArgument>-XX:InitiatingHeapOccupancyPercent=45</extraArgument>
+										<!-- 为混合垃圾回收周期中要包括的旧区域设置占用率阈值.默认占用率为 65%.这是一个实验性的标志.此设置取代了 -XX:G1OldCSetRegionLiveThresholdPercent 设置.Java HotSpot VM build 23 中没有此设置. -->
+										<extraArgument>-XX:G1MixedGCLiveThresholdPercent=65</extraArgument>
+										<!-- 设置您愿意浪费的堆百分比.如果可回收百分比小于堆废物百分比,Java HotSpot VM 不会启动混合垃圾回收周期.默认值是 10%.Java HotSpot VM build 23 中没有此设置. -->
+										<extraArgument>-XX:G1HeapWastePercent=10</extraArgument>
+										<!-- 设置标记周期完成后,对存活数据上限为 G1MixedGCLIveThresholdPercent 的旧区域执行混合垃圾回收的目标次数.默认值是 8 次混合垃圾回收.混合回收的目标是要控制在此目标次数以内.Java HotSpot VM build 23 中没有此设置. -->
+										<extraArgument>-XX:G1MixedGCCountTarget=8</extraArgument>
+										<!-- 设置混合垃圾回收期间要回收的最大旧区域数.默认值是 Java 堆的 10%.Java HotSpot VM build 23 中没有此设置. -->
+										<extraArgument>-XX:G1OldCSetRegionThresholdPercent=10</extraArgument>
+										<!-- 设置作为空闲空间的预留内存百分比,以降低目标空间溢出的风险.默认值是 10%.增加或减少百分比时,请确保对总的 Java 堆调整相同的量.Java HotSpot VM build 23 中没有此设置. -->
+										<extraArgument>-XX:G1ReservePercent=10</extraArgument>
+										<!-- 手动开启Java String对象的分割工作,这个是JDK8u20之后新增的参数,主要用于相同String避免重复申请内存,节约Region的使用； -->
+										<extraArgument>-XX:+UseStringDeduplication</extraArgument>
+										<!-- 关闭GC时间过长系统自动检测OOM(OutOfMemory)提示GC overhead limit exceeded,目的是显示内存溢出异常,方便Wrapper Service检测到并重启 -->
+										<extraArgument>-XX:-UseGCOverheadLimit</extraArgument>
+										<!-- 表示一个对象如果在Survivor区移动了7次那下次MinorGC时就进入老年代。如果设置为0的话，则年轻代对象不经过Survivor区，直接进入年老代，对于需要大量常驻内存的应用， 
+											这样做可以提高效率。如果将此值设置为一个较大值，则年轻代对象会在Survivor区进行多次复制，这样可以增加对象在年轻代存活时间，增加对象在年轻代被垃圾回收的概率， 
+											减少Full GC的频率，可以在某种程度上提高服务稳定性。默认值:15 -->
+										<extraArgument>-XX:MaxTenuringThreshold=10</extraArgument>
+										<!-- 取消 内存整理，G1GC 天生优势 --> 
+										<extraArgument>-XX:-ResizePLAB</extraArgument>
+										<extraArgument>-XX:+PrintAdaptiveSizePolicy</extraArgument>
+										<extraArgument>-XX:+ParallelRefProcEnabled</extraArgument>
+										<extraArgument>-XX:+G1SummarizeConcMark</extraArgument>
+										<!-- 开启GC日志，等同于-verbose:gc 表示打开简化的GC日志 -->
+										<extraArgument>-XX:+PrintGC</extraArgument>
+										<!-- 在发生垃圾回收时打印内存回收日志，并在进程退出时输出当前内存各区域分配情况 -->
+										<extraArgument>-XX:+PrintGCDetails</extraArgument>
+										<!-- 打印出GC发生的具体时间 -->
+										<extraArgument>-XX:+PrintGCDateStamps</extraArgument>
+										<extraArgument>-XX:+PrintGCApplicationStoppedTime</extraArgument> <!-- 打印应用停留时间  -->
+										<!-- 让JVM在每次MinorGC后打印出当前使用的Survivor中对象的年龄分布  -->
+										<extraArgument>-XX:+PrintTenuringDistribution</extraArgument> 
+										<!-- -Xloggc:<file> 表示把GC日志写入到一个文件中去，而不是打印到标准输出中 -->
+										<extraArgument>-Xloggc:../logs/gc.log</extraArgument>
+										<extraArgument>-XX:+UseGCLogFileRotation</extraArgument>
+										<extraArgument>-XX:NumberOfGCLogFiles=10</extraArgument>
+										<extraArgument>-XX:GCLogFileSize=20M</extraArgument>
+										<!--  当堆内存空间溢出时输出堆的内存快照 -->
+										<extraArgument>-XX:+HeapDumpOnOutOfMemoryError</extraArgument>
+										<extraArgument>-XX:HeapDumpPath=../logs/heap.log</extraArgument>
 									</extraArguments>
 									<systemProperties>
 										<systemProperty>java.security.policy=conf/policy.all</systemProperty>
